# berry-editor

./: .output.txt  BugFixIntegrationTestGuidelines.md  CLAUDE.md  COVERAGE_REPORT.md  CURSOR_DRIFT_FIX.md  CURSOR_FIX_VERIFICATION.md  Cargo.toml  INTELLIJ_PRO_COMPLETE.md  LSP_UI_INTEGRATION.md  PHASE1_COMPLETE.md  PHASE2_100_PERCENT.md  PHASE2_COMPLETE.md  PHASE2_DESIGN.md  PHASE2_PROGRESS.md  PHASE3_COMPLETION.md  PHASE3_DESIGN.md  PHASE4_COMPLETION.md  PHASE4_DESIGN.md  PHASE5_DESIGN.md  PHASE5_PROGRESS.md  README.md  RENDERING_BUG_ANALYSIS.md  RENDERING_BUG_FIX_SUMMARY.md  SPLITTER_UI_COMPLETE.md  SYNTAX_HIGHLIGHTING_COVERAGE.md  TESTING.md  TEST_GUIDE.md  TEST_STRATEGY.md  Trunk-standalone.toml  Trunk.toml  UI_INTEGRATION_COMPLETE.md  check_canvas_height.rs  check_terminal.js  echo  index.html  run.sh  run_all_tests.sh  run_canvas_e2e_tests.sh  run_e2e_tests.sh  run_rendering_tests.sh  (+4 more)
.cargo/: config.toml
src/: buffer.rs  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: berrycode_commands.rs  fs_commands.rs  hyper_search.rs  indexer.rs  lib.rs  main.rs  search_commands.rs  streaming.rs  syntax_highlighter.rs  syntax_highlighter_test.rs
src-tauri/src/app_database/: mod.rs  operations.rs  schema.rs  types.rs
src-tauri/src/berrycode/: aci.rs.bak3  agent.rs.bak6  analytics.rs.bak3  analytics.rs.bak6  args.rs.bak3  artifacts.rs.bak6  asset_registry.rs.bak6  berryflow_config.rs  cache.rs.bak3  chunker.rs.bak3  chunker.rs.bak6  commands.rs.bak5  commands.rs.bak6  context.rs  context.rs.bak6  context_window.rs.bak4  context_window.rs.bak6  conversation_engine.rs  conversation_engine.rs.bak3  conversation_engine.rs.bak6  copypaste.rs.bak5  copypaste.rs.bak6  dependency_tracker.rs  dependency_tracker.rs.bak3  dependency_tracker.rs.bak6  diff.rs  diff.rs.bak6  display.rs.bak4  editor.rs.bak5  editor.rs.bak6  editor_backend.rs.bak3  editor_backend.rs.bak6  embeddings.rs.bak5  embeddings.rs.bak6  exceptions.rs.bak5  format_settings.rs.bak3  format_settings.rs.bak6  git_operations.rs.bak4  git_ops.rs  github_oauth.rs.bak6  (+91 more)
src-tauri/src/berrycode/agents/: architect.rs.bak4  architect.rs.bak6  bug_fixer.rs.bak3  bug_fixer.rs.bak6  doc_writer.rs.bak5  doc_writer.rs.bak6  mod.rs  mod.rs.bak6  programmer.rs.bak4  programmer.rs.bak6  qa_engineer.rs.bak4  qa_engineer.rs.bak6  refactorer.rs.bak4  refactorer.rs.bak6  tests.rs.bak3  tests.rs.bak6
src-tauri/src/berrycode/coders/: base_coder.rs  base_coder.rs.bak4  base_coder.rs.bak6  mod.rs  wholefile_coder.rs.bak3  wholefile_coder.rs.bak6
src-tauri/src/berrycode/collaboration/: mod.rs.bak6  ot_engine.rs.bak4  session_manager.rs.bak3
src-tauri/src/berrycode/common/: mod.rs.bak3  tauri_commands.rs  tauri_commands.rs.bak5  tauri_commands.rs.bak6
src-tauri/src/berrycode/debug/: dap_client.rs.bak6  mod.rs.bak5
src-tauri/src/berrycode/jupyter/: kernel.rs.bak5  mod.rs.bak4  notebook.rs.bak3
src-tauri/src/berrycode/remote/: mod.rs.bak3  remote_fs.rs.bak3  ssh_client.rs
src-tauri/src/berrycode/scaffolding/: generator.rs.bak6  mod.rs  prompts.rs.bak6
src-tauri/src/berrycode/scaffolding/prompts/: api_service.txt  cli_tool.txt  library.txt  mobile_app.txt  web_app.txt
src-tauri/src/berrycode/ui/: mod.rs.bak5  settings.rs.bak3
src-tauri/src/berrycode/web/: handlers.rs.bak5  mod.rs.bak3  server.rs  server.rs.bak4  server.rs.bak6  tests.rs.bak4  tests.rs.bak6
src-tauri/src/berrycode/web/api/: berrychat_api.rs.bak3  mod.rs
src-tauri/src/berrycode/web/api/collaboration/: collaboration_api.rs.bak3  collaboration_api.rs.bak6  mod.rs.bak4  slack_api.rs.bak5  virtual_office_api.rs.bak6  webrtc_api.rs.bak6
src-tauri/src/berrycode/web/api/database/: database_api.rs.bak3  mod.rs.bak5
src-tauri/src/berrycode/web/api/debug/: debug_api.rs.bak5  debug_api.rs.bak6  mod.rs.bak4
src-tauri/src/berrycode/web/api/docker/: docker_api.rs.bak6  k8s_api.rs.bak5  mod.rs.bak5
src-tauri/src/berrycode/web/api/editor/: ai_completion_api.rs.bak5  ai_completion_api.rs.bak6  editor_api.rs.bak3  lsp_api.rs.bak3  lsp_api.rs.bak6  mod.rs.bak5
src-tauri/src/berrycode/web/api/extensions/: extensions_api.rs.bak3  extensions_api.rs.bak6  mod.rs
src-tauri/src/berrycode/web/api/files/: file_api.rs  file_api.rs.bak6  mod.rs.bak3  search_api.rs.bak5  search_api.rs.bak6
src-tauri/src/berrycode/web/api/git/: git_api.rs  git_api.rs.bak4  git_api.rs.bak6  github_api.rs  github_api.rs.bak5  github_api.rs.bak6  mod.rs.bak6
src-tauri/src/berrycode/web/api/jupyter/: jupyter_api.rs.bak4  jupyter_api.rs.bak6  mod.rs
src-tauri/src/berrycode/web/infrastructure/: auth.rs.bak5  auth.rs.bak6  auth_db.rs.bak5  auth_middleware.rs.bak3  crypto.rs  database.rs  database.rs.bak4  database.rs.bak6  error.rs.bak3  middleware.rs.bak6  mod.rs.bak3  session.rs.bak3  session_db.rs.bak3  session_db.rs.bak6  websocket.rs.bak3  websocket.rs.bak6
src-tauri/src/database/: commands.rs  mod.rs  operations.rs  types.rs
src-tauri/src/git/: commands.rs  mod.rs  operations.rs  types.rs
src-tauri/src/lsp/: client.rs  commands.rs  mod.rs  protocol.rs
src-tauri/src/static/: artifacts_template.html  debug-editor.html  simple-editor-test.html  test-editor.html
src-tauri/src/static/berry-editor/: berry-editor-40b0cf13378613dc.js  berry-editor-40b0cf13378613dc_bg.wasm  berry-editor-6f8e2ed9355d9c03.js  berry-editor-6f8e2ed9355d9c03_bg.wasm  berry-editor.js  berry-editor_bg.wasm
src-tauri/src/static/css/: extensions.css  file-tree-enhanced.css  markdown-styles.css  modern-dark.css  notebook.css  settings-leptos.css  style.css  ui-enhancements.css  ui-features.css
src-tauri/src/static/i18n/: en.json  ja.json
src-tauri/src/static/js/: extension-host.js  extensions-ui.js  file-tree-enhanced.js  git-graph.js  markdown-renderer.js  model-settings.js  package-lock.json  ui-features.js  voice-input.js  workflow-canvas.js
src-tauri/src/static/snippets/: javascript.json  rust.json
src-tauri/src/terminal/: commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/workflow/: commands.rs  mod.rs  presets.rs  types.rs
src-tauri/tests/: app_database_test.rs  database_integration_test.rs
(+161 files in other folders)
