[package]
name = "berry-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRect",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Location",
    "NodeList",
    "Storage",
    "EventTarget",
] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
ropey = "1.6"
unicode-segmentation = "1.11"
indexmap = "2.0"
regex = "1.10"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = "0.4"
urlencoding = "2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
