[package]
name = "berry-editor-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
walkdir = "2.4"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"  # ✅ IntelliJ Pro: Symbol indexing with regex patterns
rayon = "1.10"  # ✅ Parallel processing for syntax highlighting & indexing
dashmap = "6.0"  # ✅ Concurrent HashMap for caching
parking_lot = "0.12"  # ✅ Faster mutex/rwlock than std
once_cell = "1.19"  # ✅ Global singleton for syntax highlighter
async-stream = "0.3"  # ✅ Async streaming for large file handling
futures = "0.3"  # ✅ Futures utilities for streaming
memmap2 = "0.9"  # ✅ Memory-mapped I/O for zero-copy search

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
