[package]
name = "berry-editor-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "berry_editor_tauri"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
walkdir = "2.4"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"  # ✅ IntelliJ Pro: Symbol indexing with regex patterns
rayon = "1.10"  # ✅ Parallel processing for syntax highlighting & indexing
dashmap = "6.0"  # ✅ Concurrent HashMap for caching
parking_lot = "0.12"  # ✅ Faster mutex/rwlock than std
once_cell = "1.19"  # ✅ Global singleton for syntax highlighter
async-stream = "0.3"  # ✅ Async streaming for large file handling
futures = "0.3"  # ✅ Futures utilities for streaming
memmap2 = "0.9"  # ✅ Memory-mapped I/O for zero-copy search
uuid = { version = "1.0", features = ["v4", "serde"] }  # ✅ Database Tools: Connection IDs
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }  # ✅ Database Tools: PostgreSQL
mysql_async = "0.34"  # ✅ Database Tools: MySQL
rusqlite = { version = "0.31", features = ["bundled"] }  # ✅ Database Tools: SQLite
mongodb = "2.8"  # ✅ Database Tools: MongoDB
portable-pty = "0.8"  # ✅ Terminal: PTY for persistent terminal sessions
tracing = "0.1"  # ✅ Terminal: Logging for debugging

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
