[package]
name = "berry-editor-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "berry_editor_tauri"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"  # ✅ IntelliJ Pro: Symbol indexing with regex patterns
rayon = "1.10"  # ✅ Parallel processing for syntax highlighting & indexing
dashmap = "6.0"  # ✅ Concurrent HashMap for caching
parking_lot = "0.12"  # ✅ Faster mutex/rwlock than std
once_cell = "1.19"  # ✅ Global singleton for syntax highlighter
async-stream = "0.3"  # ✅ Async streaming for large file handling
futures = "0.3"  # ✅ Futures utilities for streaming
futures-util = "0.3"
async-trait = "0.1"
memmap2 = "0.9"  # ✅ Memory-mapped I/O for zero-copy search
uuid = { version = "1.0", features = ["v4", "serde"] }  # ✅ Database Tools: Connection IDs
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }  # ✅ Database Tools: PostgreSQL
mysql_async = "0.34"  # ✅ Database Tools: MySQL
rusqlite = { version = "0.31", features = ["bundled"] }  # ✅ Database Tools: SQLite
mongodb = "2.8"  # ✅ Database Tools: MongoDB
portable-pty = "0.8"  # ✅ Terminal: PTY for persistent terminal sessions
tracing = "0.1"  # ✅ Terminal: Logging for debugging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI dependencies (from parent berrycode)
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
config = "0.14"
dotenv = "0.15"
ctrlc = "3.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
reqwest-eventsource = "0.6"
urlencoding = "2.1"

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
dialoguer = "0.11"
reedline = "0.38"

# Rich terminal output
console = "0.15"
indicatif = "0.17"
colored = "2.1"
termimad = "0.34"

# File operations
notify = "7.0"
ignore = "0.4"
glob = "0.3"

# Code parsing (optional)
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
syntect = { version = "5.2", optional = true }

# Lightweight HTTP server for artifacts
tiny_http = "0.12"

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }

# Web scraping
scraper = "0.21"
html2text = "0.12"

# Utilities
lazy_static = "1.4"
tempfile = "3.8"
dirs = "5.0"
lru = "0.12"
md5 = "0.7"
base64 = "0.22"

# Clipboard
arboard = "3.4"

# Web browser
webbrowser = "1.0"

# Diffing
similar = "2.4"

# Cryptography
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# HTTP and LLM API clients
openai-api-rs = { version = "5.0", optional = true }

# Token counting
tiktoken-rs = "0.5"

# RAG (Retrieval Augmented Generation) - optional
hnsw_rs = { version = "0.3", optional = true }
bm25 = { version = "0.2", optional = true }
indexmap = { version = "2.6", optional = true }
fastembed = { version = "5", optional = true }

# Markdown rendering
comrak = { version = "0.26", optional = true }

# Headless browser
headless_chrome = { version = "1.0", optional = true }

# Shell completion
clap_complete = "4.5"

# LSP support
tower-lsp = { version = "0.20", optional = true }
lsp-types = { version = "0.95", optional = true }
serde_json_path = { version = "0.7", optional = true }

# Web server (for collaboration features)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"], optional = true }
tera = { version = "1.19", optional = true }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"], optional = true }
tokio-stream = { version = "0.1", optional = true }
time = { version = "0.3", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "chrono", "uuid"], optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
bcrypt = { version = "0.15", optional = true }

# Kubernetes integration
kube = { version = "0.96", features = ["client", "runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }

# Docker integration
bollard = { version = "0.17", optional = true }

# SSH for remote development
ssh2 = { version = "0.9", optional = true }

# Jupyter notebook support
zmq = { version = "0.10", optional = true }

# Audio (for voice features)
rodio = { version = "0.19", optional = true }
cpal = { version = "0.15", optional = true }

# GUI Editor
ropey = { version = "1.6", optional = true }
unicode-segmentation = { version = "1.11", optional = true }
xi-rope = { version = "0.3", optional = true }

# Additional utilities
bincode = "1.3"
rfd = "0.15"
trash = "5.2"
hostname = "0.4"
tokio-cron-scheduler = "0.13"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = ["custom-protocol", "llm", "parsing", "lsp"]
custom-protocol = ["tauri/custom-protocol"]
llm = ["openai-api-rs"]
rag = ["hnsw_rs", "bm25", "indexmap", "fastembed"]
parsing = ["tree-sitter", "tree-sitter-python", "tree-sitter-rust", "tree-sitter-javascript", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-ruby", "tree-sitter-bash", "syntect", "comrak"]
browser = ["headless_chrome"]
lsp = ["tower-lsp", "lsp-types", "serde_json_path"]
web = ["axum", "tower", "tower-http", "tera", "axum-extra", "tokio-stream", "time", "sqlx", "redis", "bcrypt", "kube", "k8s-openapi", "bollard", "ssh2"]
jupyter = ["zmq"]
voice = ["rodio", "cpal"]
gui-editor = ["ropey", "unicode-segmentation", "lsp", "parsing"]
